# libcmt

./: .gitignore  CMakeLists.txt
include/cmt/: cmt.h  resource.h
include/cmt/memory/: buffer.h  vertex.h
include/cmt/rendering/: depthstencil.h
